# biasDetection

./: .gitignore  CMakeLists.txt  Interaction Network.py  README.md  createNetwork.py  requirements.txt  test.py  twitter_streaming.py
UI/: server.py  user.html
apps/: CMakeLists.txt  ocl_vector.cpp  testFile.cpp
checkBenchmark/: benchmark_1000  benchmark_2000  benchmark_3000  benchmark_4000  benchmark_5000  benchmark_6000  benchmark_7000  benchmark_8000  benchmark_9000
include/: graph.hpp
parallelCNDP/: CMakeLists.txt
parallelCNDP/src/: graph.h  testFile.cpp
scripts/: preprocess.py  secure_models.py  serial.py  test.adjlist  test.py  time.py  user_topic.py
src/: CMakeLists.txt  gpuCNDP.cl  gpuNextCandidate.cl  gpuUnite.cl  graph.cpp
src/kernels/: gpuCNDP.cl  gpuPrint.cl  heteroCNDP.cl  vector_add_kernel.cl
